--- a/authors.html
+++ b/authors.html
@@ -3,22 +3,22 @@
 <head>
         <meta charset="utf-8" />
         <title>About me - Authors</title>
-        <link rel="stylesheet" href="https://mukhan.github.io/theme/css/main.css" />
-        <link href="https://mukhan.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="About me Atom Feed" />
+        <link rel="stylesheet" href="https://um4r12.github.io/theme/css/main.css" />
+        <link href="https://um4r12.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="About me Atom Feed" />
 </head>
 
 <body id="index" class="home">
         <header id="banner" class="body">
-                <h1><a href="https://mukhan.github.io/">About me</a></h1>
+                <h1><a href="https://um4r12.github.io/">About me</a></h1>
                 <nav><ul>
-                    <li><a href="https://mukhan.github.io/category/blog.html">Blog</a></li>
+                    <li><a href="https://um4r12.github.io/category/blog.html">Blog</a></li>
                 </ul></nav>
         </header><!-- /#banner -->
 
 <section id="content" class="body">
     <h1>Authors on About me</h1>
     <ul>
-        <li><a href="https://mukhan.github.io/author/muhammad-umer-khan.html">Muhammad Umer Khan</a> (1)</li>
+        <li><a href="https://um4r12.github.io/author/muhammad-umer-khan.html">Muhammad Umer Khan</a> (1)</li>
     </ul>
 </section>
 
@@ -35,7 +35,7 @@
                 <div class="social">
                         <h2>social</h2>
                         <ul>
-                            <li><a href="https://mukhan.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
+                            <li><a href="https://um4r12.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">atom feed</a></li>
 
                             <li><a href="#">You can add links in your config file</a></li>
                             <li><a href="#">Another social link</a></li>
