--- a/hijri.html
+++ b/hijri.html
@@ -144,12 +144,7 @@ try {
         nextPrayer = prayers[(prayer + 1) % 7];
     }
 
-    if (prayers[prayer] == currPrayer) {
-      html += '<tr><td><strong>' + prayers[prayer] + '</strong></td>';
-    } else {
-      html += '<tr><td>'+ prayer[prayers]+ '</td>';
-    }
-
+    html += '<tr><td>' + prayers[prayer] + '></td>';
 		html += '<td>'+ times[prayers[prayer].toLowerCase()]+ '</td></tr>';
 	
   }
