forgot to remove char

--- a/hijri.html
+++ b/hijri.html
@@ -144,7 +144,7 @@ try {
         nextPrayer = prayers[(prayer + 1) % 7];
     }
 
-    html += '<tr><td>' + prayers[prayer] + '></td>';
+    html += '<tr><td>' + prayers[prayer] + '</td>';
 		html += '<td>'+ times[prayers[prayer].toLowerCase()]+ '</td></tr>';
 	
   }
