--- a/hijri.html
+++ b/hijri.html
@@ -110,7 +110,7 @@ try {
    <script type="text/javascript" src="../PrayTimes.js"></script>
 
 <br>
-<p align="center">Edmonton, Ab, Canada<p>
+<p align="center">Edmonton, Ab, Canada</p>
 <p align="center" id="prayer"></p>
 <div align="center" id="table"></div>
 
@@ -151,7 +151,7 @@ try {
   }
 
 	html += '</table>';
-  
+
   document.getElementById('prayer').innerHtml  = '<strong>' + currPrayer + '</strong>';
 	document.getElementById('table').innerHTML = html;
 
