--- a/hijri.html
+++ b/hijri.html
@@ -152,7 +152,7 @@ try {
 
 	html += '</table>';
 
-  document.getElementById('prayer').innerHtml  = '<strong>' + currPrayer + '</strong>';
+  document.getElementById('prayer').innerHTML = '<strong>' + currPrayer + '</strong>';
 	document.getElementById('table').innerHTML = html;
 
 </script>
